--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit==1.12.0
-python-dotenv==0.20.0
-langchain-cohere==0.1.5
+streamlit
+python-dotenv
+langchain-cohere
 dotenv
-pip==24.2
+pip
