Added feature for recording logs using langchain

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,5 @@
-COHERE_API_KEY='YOUR_COHERE_API_KEY'
+TOGETHER_KEY="YOUR_API_KEY"
+LANGSMITH_API="YOUR_API_KEY"
+LANGSMITH_ENDPOINT="YOUR_ENDPOINT"
+LANGSMITH_PROJECT="YOUR_PROJECT_NAME"
+NAME="YOUR_TOGETHER_AI_MODEL_NAME"
