--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-TOGETHER_KEY="YOUR_API_KEY"
+MISTRAL_KEY="YOUR_API_KEY"
 LANGSMITH_API="YOUR_API_KEY"
 LANGSMITH_ENDPOINT="YOUR_ENDPOINT"
 LANGSMITH_PROJECT="YOUR_PROJECT_NAME"
-NAME="YOUR_TOGETHER_AI_MODEL_NAME"
+NAME="YOUR_MISTRAL_AI_MODEL_NAME"
